# openaiwhisperlocal

./: .editorconfig  .gitattributes  README.md  post.poetry.sh  pyproject.toml
src/: __init__.py
