[tool.poetry]
name = "openaiwhisperlocal"
version = "0.1.0"
description = "run openai-whisper in local"
authors = ["Certseeds <51754303+Certseeds@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "<2.0.0"
torch = "2.3.1"
openai-whisper = {git = "ssh://ssh.github.com/openai/whisper.git"}


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://mirror.sjtu.edu.cn/pytorch-wheels/torch_stable.html"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
